--- a/Documents/Flow Store/flowstore/package.json
+++ b/Documents/Flow Store/flowstore/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-v0-project",
+  "name": "flowstore",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -47,11 +47,11 @@
     "geist": "latest",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
-    "next": "^15.5.6",
+    "next": "15.0.3",
     "next-themes": "^0.4.6",
-    "react": "^18.3.1",
+    "react": "18.3.1",
     "react-day-picker": "9.8.0",
-    "react-dom": "^18.3.1",
+    "react-dom": "18.3.1",
     "react-hook-form": "^7.60.0",
     "react-icons": "^5.5.0",
     "react-resizable-panels": "^2.1.7",
